--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-Assignment
+Missing Values assignment tests the candidate's ability to use statistics and programming together to clean datasets. 
+
+Strings assignment tests the candidate's ability to apply the concepts of Lists and Strings to perform string manipulation. 
